--- a/styling/style.css
+++ b/styling/style.css
@@ -35,12 +35,13 @@
     font-size: 50px;
     min-width: fit-content;
     margin-top: 0px;
+    text-align: center;
 }
 .name_link{
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
     font-style: italic;
-    text-align: right;
+    text-align: center;
     color: #192655;
 }
 .frame{
